--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IRange.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IRangeFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Range.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\RangeFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMeasure.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMeasureFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\Measure.h" />
@@ -94,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IRangeFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Range.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\RangeFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IMeasureFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\Measure.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MeasureFactory.cpp" />
