--- a/Visual Studio/LyreTest.vcxproj
+++ b/Visual Studio/LyreTest.vcxproj
@@ -57,6 +57,7 @@
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockPitchName.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockStep.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestRange.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestMeasure.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestLayer.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestBeatPattern.cpp" />
