--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IInstrument.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IInstrumentFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Instrument.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\InstrumentFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IRange.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IRangeFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\Range.h" />
@@ -98,6 +102,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IInstrumentFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Instrument.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\InstrumentFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IRangeFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\Range.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\RangeFactory.cpp" />
