--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPart.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPartFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Part.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\PartFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IInstrument.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IInstrumentFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\Instrument.h" />
@@ -102,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IPartFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Part.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\PartFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IInstrumentFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\Instrument.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\InstrumentFactory.cpp" />
