--- a/Visual Studio/LyreTest.vcxproj
+++ b/Visual Studio/LyreTest.vcxproj
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-
     <!-- TestPlatform="vstest" -> builds as a vstest dll
          TestPlatform="cpul" -> builds a cpp unit lite exe -->
     <TestPlatform Condition=" 'TestPlatform' == '' ">vstest</TestPlatform>
@@ -14,7 +13,6 @@
     <BinaryExt Condition="'$(TestPlatform)'=='cpul'">exe</BinaryExt>
     <TestDefine Condition="'$(TestPlatform)'=='cpul'">__DONT_USE_VS_TEST__</TestDefine>
   </PropertyGroup>
-
   <Target Name="messages">
     <Message Text="Project = $(MSBuildProjectFile)" />
     <Message Text="TestPlatform = $(TestPlatform)" />
@@ -22,7 +20,6 @@
     <Message Text="BinaryExt = $(BinaryExt)" />
     <Message Text="TestDefine = $(TestDefine)" />
   </Target>
-  
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -59,6 +56,7 @@
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockPitchName.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockStep.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestHandle.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestMasterTrack.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestPart.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestInstrument.cpp" />
