--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,10 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMovement.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMovementFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Movement.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MovementFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMasterTrack.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMasterTrackFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\MasterTrack.h" />
@@ -111,6 +115,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IMovementFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Movement.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MovementFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IMasterTrackFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MasterTrack.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MasterTrackFactory.cpp" />
