--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,10 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMovementSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMovementSpecFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MovementSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MovementSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMovement.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMovementFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\Movement.h" />
@@ -115,6 +119,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IMovementSpecFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MovementSpec.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MovementSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IMovementFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\Movement.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MovementFactory.cpp" />
