--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,10 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPartSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPartSpecFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\PartSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\PartSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMovementSpec.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMovementSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\MovementSpec.h" />
@@ -119,6 +123,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IPartSpecFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\PartSpec.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\PartSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IMovementSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MovementSpec.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MovementSpecFactory.cpp" />
