--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,10 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IScoreSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IScoreSpecFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\ScoreSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\ScoreSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IPartSpec.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IPartSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\PartSpec.h" />
@@ -123,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IScoreSpecFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreSpec.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IPartSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\PartSpec.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\PartSpecFactory.cpp" />
