--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,14 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IScore.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IScoreFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Score.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\ScoreFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IScoreSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IScoreSpecFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\ScoreSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\ScoreSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IScoreSpec.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IScoreSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\ScoreSpec.h" />
@@ -127,6 +135,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IScoreFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Score.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IScoreSpecFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreSpec.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IScoreSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreSpec.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreSpecFactory.cpp" />
