--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,14 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMusicFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMusicFactoryFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MusicFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MusicFactoryFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IExporter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IExporterFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Exporter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\ExporterFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IScore.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IScoreFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\Score.h" />
@@ -131,6 +139,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IMusicFactoryFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MusicFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MusicFactoryFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IExporterFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Exporter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\ExporterFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IScoreFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\Score.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\ScoreFactory.cpp" />
