--- a/Visual Studio/LyreTest.vcxproj
+++ b/Visual Studio/LyreTest.vcxproj
@@ -56,6 +56,8 @@
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockPitchName.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockStep.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestMusicFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestExporter.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestScore.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestScoreSpec.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestPartSpec.cpp" />
