--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,10 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPartGroupSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPartGroupSpecFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\PartGroupSpec.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\PartGroupSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMusicFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IMusicFactoryFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\MusicFactory.h" />
@@ -139,6 +143,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IPartGroupSpecFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\PartGroupSpec.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\PartGroupSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IMusicFactoryFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MusicFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\MusicFactoryFactory.cpp" />
