--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -22,6 +22,10 @@
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Handle.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMeasureStrategy.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMeasureStrategyFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MeasureStrategy.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MeasureStrategyFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IPartGroupSpec.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IPartGroupSpecFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\PartGroupSpec.h" />
@@ -143,6 +147,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IMeasureStrategyFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MeasureStrategy.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MeasureStrategyFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IPartGroupSpecFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\PartGroupSpec.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\PartGroupSpecFactory.cpp" />
